added html elements & some css formating

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <!-- GoogleFonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap" rel="stylesheet">
+
     <!-- Bootstrap 4.6 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -29,16 +28,85 @@
 </head>
 
 <body>
+    <!------------------- NAV ---------------------->
+    <nav class="navbar">
+        <img class="navbar_logo" src="assets/img/logo_header.png" alt="logo_tia-tomate">
+    </nav>
+
     <!------------------- HEADER ---------------------->
+    <header class="header">
+        <div class="header__container">
+            <h1 class="header__title">
+                <span class="header__title header__title--extra-light">
+                    De nuestro cariño
+                </span>
+                <br>
+                A TU MESA
+            </h1>
+        </div>
+    </header>
+    <!------------------- ARTICLE 1 ---------------------->
+    <article class="article article--gray">
+        <div class="article__container">
+            <img class="article__img" src="assets/img/about-1.png" alt="">
+            <h3 class="article__title"> Tomates 100% orgánicos</h3>
+            <p class="article__text">
+
+            </p>
+        </div>
+    </article>
+    <!------------------- ARTICLE 2---------------------->
+    <article class="article">
+        <div class="article__container">
+            <img class="article__img article__img--short" src="assets/img/about-2.png" alt="">
+            <h3 class="article__title"> Desde Limache con amor</h3>
+            <p class="article__text">
+
+            </p>
+        </div>
+    </article>
+
+    <!------------------- SECTION---------------------->
+
+    <section class="section">
+        <div class="section__container">
+            <h1 class="section__title">NOSOTROS</h1>
+        </div>
+    </section>
+
+    <!------------------- ARTICLE 3 ---------------------->
+    <article class="article">
+        <div class="article__container">
+            <img class="article__img article__img--short" src="assets/img/about-3.png" alt="">
+            <h3 class="article__title"> Desde Limache con amor</h3>
+            <p class="article__text">
+
+            </p>
+            <img class="article__img article__img--short" src="assets/img/about-4.png" alt="">
+            <h3 class="article__title"> Desde Limache con amor</h3>
+            <p class="article__text">
+
+            </p>
+        </div>
+    </article>
+
+    <!------------------- SECTION---------------------->
+
+    <section class="section">
+        <div class="section__container">
+            <h2 class="section__title">¿Tomates para tu negocio?</h1>
+            <button class="btn btn-light"><h2>CLICK AQUÍ</h2></button>
+        </div>
+    </section>
 
 
+    <!------------------- FOOTER ---------------------->
 
-    <!------------------- MAIN ---------------------->
-
-
-
-    <!------------------- FORM ---------------------->
-
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="assets/img/logo_footer.png" alt="logo_tia-tomate">
+        </div>
+    </footer>
 
 
     <!------------------- JavaScript ---------------------->
