--- a/index.html
+++ b/index.html
@@ -49,20 +49,31 @@
     <article class="article article--gray">
         <div class="article__container">
             <img class="article__img" src="assets/img/about-1.png" alt="">
-            <h3 class="article__title"> Tomates 100% orgánicos</h3>
-            <p class="article__text">
-
-            </p>
+            <div class="article__container__text article__container__text--snow">
+                <h2 class="article__title article__title--snow"> Tomates 100% orgánicos</h2>
+                <p class="article__paragraph">En tía tomate estamos comprometidos con tu salud y la de tu
+                    familia, de modo que probarás tomates ricos y sin sabor artificial. </p>
+                <p class="article__paragraph">Para darle vida nuestros productos usamos materias primas
+                    orgánicas y que estén en completo equilibrio con la naturaleza. Así que al comprar cualquier tipo de
+                    tomate con nosotros te asegurarás de que comerás la mejor calidad de tomates Limachinos.</p>
+            </div>
         </div>
     </article>
     <!------------------- ARTICLE 2---------------------->
     <article class="article">
         <div class="article__container">
-            <img class="article__img article__img--short" src="assets/img/about-2.png" alt="">
-            <h3 class="article__title"> Desde Limache con amor</h3>
-            <p class="article__text">
-
-            </p>
+            <img class="article__img" src="assets/img/about-2.png" alt="">
+            <div class="article__container__text article__container__text--gray">
+                <h2 class="article__title">Desde Limache con amor</h2>
+                <p class="article__paragraph">Los tomates que estás a punto de comprar son nacidos y criados en una de
+                    las
+                    mejores zonas para la producción de tomates de Chile. El proceso que conlleva criar estos tomates
+                    toma
+                    alrededor de tres meses de muchos cariños y cuidados.</p>
+                <p class="article__paragraph">Los tomates tomas todos los nutrientes de esta hermosa tierra para que
+                    luego
+                    tú los disfrutes en cualquier ocasión.</p>
+            </div>
         </div>
     </article>
 
@@ -77,16 +88,25 @@
     <!------------------- ARTICLE 3 ---------------------->
     <article class="article">
         <div class="article__container">
-            <img class="article__img article__img--short" src="assets/img/about-3.png" alt="">
-            <h3 class="article__title"> Desde Limache con amor</h3>
-            <p class="article__text">
+            <img class="article__img article__img--photo" src="assets/img/about-3.png" alt="">
+            <div class="article__container__text article__container__text--gray pb-5">
+                <h2 class="article__title">Javiera Kunstmann</h2>
+                <p class="article__paragraph">Javiera es La orgullosa dueña de Tía tomate. Nacida y criada en Limache se
+                    siente tan a gusto aquí como los tomates que cosecha.</p>
+                <p class="article__paragraph">Ella es la encargada administrativa de Tía tomate y estará muy a gusto que
+                    la
+                    contactes para probar la mejor calidad de tomates de todo Limache.</p>
+                <p class="article__paragraph">Javiera y su marido llevan más de 15 años en el rubro ofreciendo la mejor calidad en tomates y desde el 2015 comenzaron con la producción de tomates orgánicos Limachinos.</p>
+            </div>
 
-            </p>
-            <img class="article__img article__img--short" src="assets/img/about-4.png" alt="">
-            <h3 class="article__title"> Desde Limache con amor</h3>
-            <p class="article__text">
+            <img class="article__img article__img--photo" src="assets/img/about-4.png" alt="">
+            <div class="article__container__text article__container__text--gray">
+                <h2 class="article__title">Roberto Pacheco </h2>
+                <p class="article__paragraph">Roberto es el marido de Javiera. Él es el encargado de darle vida a los
+                    tomates, usando su vasta experiencia en la agricultura ha sabido seleccionar las mejores cepas de
+                    tomates para su cría y cosecha.</p>
+            </div>
 
-            </p>
         </div>
     </article>
 
@@ -95,7 +115,9 @@
     <section class="section">
         <div class="section__container">
             <h2 class="section__title">¿Tomates para tu negocio?</h1>
-            <button class="btn btn-light"><h2>CLICK AQUÍ</h2></button>
+                <button class="btn btn-light">
+                    <h2>CLICK AQUÍ</h2>
+                </button>
         </div>
     </section>
 
