--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 <p class="article__paragraph">Ella es la encargada administrativa de Tía tomate y estará muy a gusto que
                     la
                     contactes para probar la mejor calidad de tomates de todo Limache.</p>
-                <p class="article__paragraph">Javiera y su marido llevan más de 15 años en el rubro ofreciendo la mejor calidad en tomates y desde el 2015 comenzaron con la producción de tomates orgánicos Limachinos.</p>
+                <p class="article__paragraph">Javiera y su marido llevan más de 15 años en el rubro ofreciendo la mejor
+                    calidad en tomates y desde el 2015 comenzaron con la producción de tomates orgánicos Limachinos.</p>
             </div>
 
             <img class="article__img article__img--photo" src="assets/img/about-4.png" alt="">
@@ -114,10 +115,10 @@
 
     <section class="section">
         <div class="section__container">
-            <h2 class="section__title">¿Tomates para tu negocio?</h1>
-                <button class="btn btn-light">
-                    <h2>CLICK AQUÍ</h2>
-                </button>
+            <h1 class="section__title">¿Tomates para tu negocio?</h1>
+            <button class="btn btn-light">
+                <h2 class="btn__text">CLICK AQUÍ</h2>
+            </button>
         </div>
     </section>
 
