Final product - performed some minor modifications

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </h1>
         </div>
     </header>
+
     <!------------------- ARTICLE 1 ---------------------->
     <article class="article article--gray">
         <div class="article__container">
@@ -59,6 +60,7 @@
             </div>
         </div>
     </article>
+
     <!------------------- ARTICLE 2---------------------->
     <article class="article">
         <div class="article__container">
@@ -115,13 +117,12 @@
 
     <section class="section">
         <div class="section__container">
-            <h1 class="section__title">¿Tomates para tu negocio?</h1>
-            <button class="btn btn-light">
+            <h1 class="section__title pb-3">¿Tomates para tu negocio?</h1>
+            <a class="btn btn-light" href="#" role="button" target="_blank"> 
                 <h2 class="btn__text">CLICK AQUÍ</h2>
-            </button>
+            </a>
         </div>
     </section>
-
 
     <!------------------- FOOTER ---------------------->
 
@@ -130,7 +131,6 @@
             <img class="footer__logo" src="assets/img/logo_footer.png" alt="logo_tia-tomate">
         </div>
     </footer>
-
 
     <!------------------- JavaScript ---------------------->
     <!--jQuery 3.6.0 sin slim-->
